--- a/whatsapp-automation/public/admin/groups.html
+++ b/whatsapp-automation/public/admin/groups.html
@@ -8,7 +8,7 @@
     :root{ --b:#1f2937; --primary:#2563eb; }
 
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background:#0f172a; color:#e2e8f0; margin:0; }
-    .wrap { max-width: 960px; margin: 28px auto; padding: 0 16px; }
+    .wrap { max-width: 1000px; margin: 28px auto; padding: 0 16px; }
 
     /* ====== ABAS ====== */
     .tabs{display:flex; gap:8px; margin:0 0 18px 0; flex-wrap:wrap}
@@ -26,6 +26,16 @@
     button { background:#2563eb; color:#fff; border:0; border-radius:12px; padding:10px 14px; cursor:pointer; font-weight:600; }
     button.secondary { background:#334155; }
     button:disabled { opacity:.5; cursor:not-allowed; }
+
+    /* Filtros */
+    .filters { display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin:12px 0 4px; }
+    .input {
+      background:#0b1220; color:#e2e8f0; border:1px solid #1f2937; border-radius:10px; padding:10px 12px;
+      outline:none; min-width:220px;
+    }
+    .check { display:flex; align-items:center; gap:6px; font-size:14px; color:#cbd5e1; }
+    .counter { margin-left:auto; color:#9fb3c8; font-size:13px; }
+
     table { width:100%; border-collapse: collapse; margin-top:12px; }
     th, td { padding:10px; border-bottom:1px solid var(--b); vertical-align: middle; }
     th { text-align:left; color:#cbd5e1; }
@@ -54,6 +64,14 @@
         <button id="btnSave" class="secondary">💾 Salvar seleção</button>
         <button id="btnTest" class="secondary">🧪 Testar postagem</button>
         <span id="status" class="muted"></span>
+      </div>
+
+      <!-- Filtros -->
+      <div class="filters">
+        <input id="q" class="input" type="search" placeholder="Buscar por nome ou JID..." />
+        <label class="check"><input id="fAdmins" type="checkbox"> Somente “somente admin”</label>
+        <label class="check"><input id="fSelected" type="checkbox"> Somente selecionados</label>
+        <span id="count" class="counter"></span>
       </div>
 
       <div id="meta" class="muted">Carregando…</div>
@@ -89,8 +107,14 @@
     const btnSave = $('#btnSave');
     const btnTest = $('#btnTest');
 
+    const q        = $('#q');
+    const fAdmins  = $('#fAdmins');
+    const fSelected= $('#fSelected');
+    const countEl  = $('#count');
+
     let groups = [];
     let selected = new Set(); // vários grupos
+    let visible = [];         // cache da lista filtrada
 
     async function getJSON(url, opts) {
       const r = await fetch(url, Object.assign({ headers: { 'Content-Type': 'application/json' } }, opts));
@@ -99,8 +123,23 @@
       return j;
     }
 
+    function applyFilters() {
+      const term = q.value.trim().toLowerCase();
+      visible = groups.filter(g => {
+        if (fAdmins.checked && !g.announce) return false; // “somente admin” (announce=true)
+        if (fSelected.checked && !selected.has(g.jid)) return false;
+        if (term) {
+          const hay = (g.name || '') + ' ' + (g.jid || '');
+          if (!hay.toLowerCase().includes(term)) return false;
+        }
+        return true;
+      });
+      countEl.textContent = `${visible.length} de ${groups.length} grupo(s)`;
+    }
+
     function render() {
-      tbody.innerHTML = groups.map(g => {
+      applyFilters();
+      tbody.innerHTML = visible.map(g => {
         const checked = selected.has(g.jid) ? 'checked' : '';
         const annTag  = g.announce ? '<span class="tag">somente admin</span>' : '';
         return `
@@ -145,8 +184,6 @@
         status.textContent = 'Sincronizando...';
         const data = await getJSON('/api/groups/sync');
         groups = data.groups || [];
-
-        // preserva seleção atual ao re-renderizar
         render();
         meta.textContent = data.saved?.lastSyncAt
           ? `Última sincronização: ${new Date(data.saved.lastSyncAt).toLocaleString()}`
@@ -186,6 +223,11 @@
         alert(e.message);
       }
     };
+
+    // listeners de filtro
+    q.addEventListener('input', render);
+    fAdmins.addEventListener('change', render);
+    fSelected.addEventListener('change', render);
 
     loadSaved().catch(console.error);
   </script>
